--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
-CD_CNN=mongodb+srv://mean_user:5eZkyEa4h2fwwIrk@cluster0.uwps6.mongodb.net/hospitaldb
+CD_CNN=mongodb+srv://mean_user:Spread980805@cluster0.uwps6.mongodb.net/hospitaldb
+JWT_SECRET=skduvbhckuwregyukergwkhbbtui@ukyeg
