--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3000
 CD_CNN=mongodb+srv://mean_user:Spread980805@cluster0.uwps6.mongodb.net/hospitaldb
 JWT_SECRET=skduvbhckuwregyukergwkhbbtui@ukyeg
+
+GOOGLE_ID=633778606543-vtir631mmple3p6t9vnm7nersm6730um.apps.googleusercontent.com
+GOOGLE_SECRET=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
